<resources>
    <string name="app_name">净喜智能</string>
    <string name="text_network_require">An internet connection is required.please check your network settings.</string>
    <string name="text_network_error">Network error.Please try it again.</string>
    <string name="text_network_require_ch">请检查您的网络设置</string>
    <string name="text_network_error_ch">网络错误,请再次连接网络</string>
    <string name="text_cancel">取消</string>
    <string name="text_ensure">确定</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="text_su">日</string>
    <string name="text_m">一</string>
    <string name="text_th">二</string>
    <string name="text_w">三</string>
    <string name="text_t">四</string>
    <string name="text_f">五</string>
    <string name="text_s">六</string>
    <string name="close">关闭</string>
    <string name="open">打开</string>
    <string name="ronghui_update">正在更新</string>
    <string name="ronghui_update_notification_tips">正在更新</string>
    <string name="ronghui_install_success">安装成功</string>
    <string name="ronghui_notification_title">软件更新</string>
    <string name="ronghui_net_error_tips">网络连接异常</string>
    <string name="ronghui_update_downloading">正在下载...</string>
    <string name="ronghui_update_fail">更新失败</string>
    <string name="ronghui_update_title_pause">暂停下载</string>
    <string name="ronghui_update_notification_pause">暂停</string>
    <string name="ronghui_update_notification_goon">继续</string>
    <string name="ronghui_update_notification_cancel">取消</string>
    <string name="download_mobile_data_tip">多任务下载四个文件，最好用WIFI测试喔。</string>
    <string name="download_start">开始下载</string>
    <string name="download_delete">删除文件</string>
    <string name="delete_succeed">删除成功</string>
    <string name="download_progress">已下载：%1$d</string>
    <string name="download_status_pause">暂停</string>
    <string name="download_status_be_pause">下载被暂停</string>
    <string name="download_status_re_download">重新下载</string>
    <string name="download_status_again_download">再次尝试</string>
    <string name="download_status_resume">继续下载</string>
    <string name="download_status_finish">下载完成！</string>
    <string name="download_error">下载出错了：%1$s</string>
    <string name="download_error_server">服务器数据错误！</string>
    <string name="download_error_network">网络不可用，请检查网络！</string>
    <string name="download_error_storage">存储卡错误，请检查存储卡！</string>
    <string name="download_error_space">存储卡空间不足！</string>
    <string name="download_error_timeout">下载超时！</string>
    <string name="download_error_un_know_host">找不到服务器。</string>
    <string name="download_error_url">URL地址错误。</string>
    <string name="download_error_argument">下载参数错误。</string>
    <string name="download_error_un">未知错误。</string>
    <string name="ronghui_update_cancel">取消更新</string>
    <string name="ronghui_update_pause">暂停</string>
    <string name="TIMEOUT">超时</string>
    <string name="network_canot_work">当前网络异常</string>
    <string name="about_update_title">检查更新</string>
    <string name="about_update_has">有新版本！</string>
    <string name="about_update_fail">检查更新失败</string>
    <string name="about_update_no">已是最新版本</string>
    <string name="about_update_tip">升级提示</string>
    <string name="about_update_force_content">当前版本已停止使用，请更新到最新版本！</string>
    <string name="about_update_not_now">以后再说</string>
    <string name="about_update_now">马上升级</string>
    <string name="not_new_datas">暂无数据！</string>
    <string name="login_logo_text">净喜智能</string>
    <string name="login_phone">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_go">登  录</string>
    <string name="login_register">注册净喜</string>
    <string name="register_register">注 册</string>
    <string name="register_code">请输入验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_back">返回</string>
    <string name="verify_title">验证手机</string>
    <string name="verify_next">下一步</string>
    <string name="reset_title">重置密码</string>
    <string name="reset_hit">请输入由6～16位大小写字母和数字组成的密码</string>
    <string name="reset_ok">确 定</string>
    <string name="home_handing_pro_title">壁挂式净水器</string>
    <string name="home_desktop_pro_title">台式净水机</string>
    <string name="home_vertical_pro_title">立式净水机</string>
    <string name="home_detail_title">查看款式和价格</string>
    <string name="pro_detail_pay">立即支付</string>
    <string name="pro_detail_select_color">选择颜色</string>
    <string name="pro_detail_selector_red">中国红</string>
    <string name="pro_detail_selector_gold">土豪金</string>
    <string name="pro_detail_selector_white">珍珠白</string>
    <string name="pro_detail_pro_info_tilte">商品信息</string>
    <string name="pro_detail_price_tilte">包年费用：</string>
    <string name="pro_detail_price_1000">￥1000元</string>
    <string name="pro_detail_price_1500">￥1500元</string>
    <string name="pro_detail_model_title">型号：</string>
    <string name="pro_detail_voltage_frequency_tilte">额定电压/频率：</string>
    <string name="pro_detail_voltage_frequency">220V～/50Hz</string>
    <string name="pro_detail_power_title">加热功率：</string>
    <string name="pro_detail_pressure_title">进水压力：</string>
    <string name="pro_detail_pressure">0.1-0.4Mpa</string>
    <string name="pro_detail_temperature_title">环境温度：</string>
    <string name="pro_detail_temperature">5℃-45℃</string>
    <string name="pro_detail_flow_title">净水流量：</string>
    <string name="pro_detail_flow">7.8L/H</string>
    <string name="pro_detail_mode_title">过滤方式：</string>
    <string name="pro_detail_mode">反渗透</string>
    <string name="pro_detail_range_title">适用水范围：</string>
    <string name="pro_detail_range">市政自来水</string>
    <string name="pro_detail_quality_title">出水水质：</string>
    <string name="pro_detail_quality">直接饮用</string>
    <string name="pro_detail_gross_weight_title">产品毛重：</string>
    <string name="pro_detail_weight_title">产品净重：</string>
    <string name="pro_detail_size_title">产品尺寸：</string>
    <string name="pro_detail_packing_size_title">包装尺寸：</string>
    <string name="product_detail_taitles">服务费用（首次安装须支付履约金）</string>
    <string name="pro_detail_model_handing">JX-RO75G-1603S</string>
    <string name="pro_detail_power_handing">2200W</string>
    <string name="pro_detail_gross_weight_handing">12.3KG</string>
    <string name="pro_detail_weight_handing">8.5KG</string>
    <string name="pro_detail_size_handing">470*355*165mm</string>
    <string name="pro_detail_packing_size_handing">855*265*465mm</string>
    <string name="pro_detail_model_desktop">JX-RO75G-1602</string>
    <string name="pro_detail_power_desktop">530W</string>
    <string name="pro_detail_gross_weight_desktop">7.5KG</string>
    <string name="pro_detail_weight_desktop">5.5KG</string>
    <string name="pro_detail_size_desktop">270*420*580mm</string>
    <string name="pro_detail_packing_size_desktop">320*480*660mm</string>
    <string name="pro_detail_model_vertical">JX-RO75G-1601</string>
    <string name="pro_detail_power_vertical">530W</string>
    <string name="pro_detail_gross_weight_vertical">13.5KG</string>
    <string name="pro_detail_weight_vertical">10.5KG</string>
    <string name="pro_detail_size_vertical">270*420*1100mm</string>
    <string name="pro_detail_packing_size_vertical">320*480*1235mm</string>
    <string name="pro_detail_introduce">净水器介绍及服务说明</string>
    <string name="pro_detail_introduce_title">净水机拥有六大核心技术</string>
    <string name="pro_detail_introduce_1">Magic RO纯化技术</string>
    <string name="pro_detail_introduce_2">末端天然矿化技术</string>
    <string name="pro_detail_introduce_3">远红外线共振技术</string>
    <string name="pro_detail_introduce_4">动态实时监测技术</string>
    <string name="pro_detail_introduce_5">极速即热既出技术</string>
    <string name="pro_detail_introduce_6">IOT物联智能技术</string>
    <string name="pro_detail_introduce_7">可确保用户喝到的每一滴水都安全健康。且出水即热，用户可根据实际需求选择不同模式的温度，实现泡茶冲奶等的方便应用。通过净喜物联网智能净水机显示屏，用户还能实时查看水质状况和滤芯使用状况，也可通过净喜手机APP远程监控产品状态，同时可通过产品终端的社区服务界面发布和查询社区服务信息，方便居家生活。</string>
    <string name="pro_detail_price">包年费用及流量说明</string>
    <string name="pro_detail_price_detail">1、包年服务收费：即无论用户一年净化多少水，用了多少水量，都一次性收取固定额度的服务费，为期一年，净喜物联网净水机包年服务收费根据产品不同有所区别，家用壁挂式服务收费为1000元/年；商用台式和立式服务收费为1500元/年；\n2、流量服务收费：即无论客户使用哪一款净喜物联网净水机，一律按流量计费收取服务费，服务费收取标准按0.28元/升，收费额度根据年度用水总量核算。</string>
    <string name="pro_detail_service">服务说明</string>
    <string name="pro_detail_service_detail">净喜物联网智能净水机采用免费赠送、全包服务的模式，只按客户选择的包年服务或流量服务收取相应的服务费用，其它安装、换芯、维护等等合部免费。客户有任何问题都可以通过终端向净喜产品体验服务中心报修或咨询，我们将为您提供及时周到的服务。实际上，当您的产品出现任何问题，我们都可以及时得到信息，提前通知您并为您提供服务，敬请放心。</string>
    <string name="pro_detail_promise">服务承诺</string>
    <string name="pro_detail_promise_1">100%免费安装净水系统</string>
    <string name="pro_detail_promise_2">100%免费终身监测水质</string>
    <string name="pro_detail_promise_3">100%免费终身更换滤芯</string>
    <string name="pro_detail_promise_4">100%免费终身维护</string>
    <string name="pro_detail_promise_5">100%免费终身升级换代</string>
    <string name="service_repair_title">家电维修</string>
    <string name="service_sweep_title">日常保洁</string>
    <string name="service_food_title">有机食品</string>
    <string name="service_plant_title">鲜花绿植</string>
    <string name="service_recovery_title">旧品回收</string>
    <string name="service_moving_title">搬家服务</string>
    <string name="service_clean_title">干洗修鞋</string>
    <string name="service_nanny_title">保姆服务</string>
    <string name="service_type_title">分类</string>
    <string name="service_detail_info">商家信息</string>
    <string name="service_detail_content">服务内容</string>
    <string name="service_detail_report">举报商家</string>
    <string name="service_report_version_title">请选择举报原因</string>
    <string name="service_report_version">请输入您的举报内容</string>
    <string name="service_report_title">举报内容</string>
    <string name="service_navi_walk">步行</string>
    <string name="service_navi_bike">骑行</string>
    <string name="service_navi_car">驾车行</string>
    <string name="service_release_title">填写您发布内容</string>
    <string name="service_selector_type_title">选择分类及内容</string>
    <string name="service_release_hit_location">填写服务地址</string>
    <string name="service_release_service_type_title">选择服务类型</string>
    <string name="service_release_service_type">选择分类</string>
    <string name="service_release_service_company_title">商家名称</string>
    <string name="service_release_service_company">请输入商家名称</string>
    <string name="service_release_service_promoter_title">推广人</string>
    <string name="service_release_service_promoter">请输入推广码 </string>
    <string name="service_release_service_time_title">选择服务时间段</string>
    <string name="service_release_service_star_time_title">开始时间</string>
    <string name="service_release_service_star_time">选择开始时间</string>
    <string name="service_release_service_end_time_title">结束时间</string>
    <string name="service_release_service_end_time">选择结束时间</string>
    <string name="service_release_service_tel_title">您绑定的手机号码</string>
    <string name="service_release_service_tel">请输入您的联系方式</string>
    <string name="service_release_service_name">请输入联系人</string>
    <string name="service_release_service_name_title">联系人</string>
    <string name="service_release_service_tel_2">联系方式</string>
    <string name="service_release_button_release">发 布</string>
    <string name="service_release_add_photo">添加图片</string>
    <string name="service_release_service_info">为了更好地为您服务，请填写服务地址</string>
    <string name="service_release_service_pcd">请选择地区信息</string>
    <string name="service_release_service_detail_addr">请填写街道门牌信息</string>
    <string name="order_detail_pay_type_title">支付方式</string>
    <string name="order_detail_button_cancle">取消订单</string>
    <string name="order_detail_button_pay">立即支付</string>
    <string name="order_detail_goods_name_title">商品</string>
    <string name="order_detail_pay_time_title">交易时间</string>
    <string name="order_detail_order_code_title_2">订单号</string>
</resources>