<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <LinearLayout
        android:id="@+id/layout_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_18"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_back"
            android:textColor="@color/color_1bb6ef"
            android:textSize="@dimen/sp_15"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_title"
        android:textColor="@color/color_595656"
        android:gravity="center"
        android:textSize="@dimen/sp_18"
        />

    <EditText
        android:id="@+id/edt_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52.5"
        android:hint="@string/reset_hit"
        android:paddingLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_18.5"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_b2b8c2"
        android:textSize="@dimen/sp_13"
        android:background="@null"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_gravity="center_vertical"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_d4d4d8"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42.5"
        android:text="@string/reset_ok"
        android:textColor="@drawable/button_press_txt_blue"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/corner_blue_bg_blue"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        />

</LinearLayout>
