<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pro_detail_introduce"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/color_333333"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginLeft="@dimen/dp_15"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/color_d4d4d8"
        />

    <TextView
        android:id="@+id/txt_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pro_detail_introduce_title"
        android:textSize="@dimen/sp_12"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_15"
        android:textColor="@color/color_333333"
        android:visibility="gone"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/white"
        >
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_15"
        android:text="@string/pro_detail_introduce_7"
        android:lineSpacingExtra="@dimen/dp_10"
        />
</LinearLayout>
