<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <LinearLayout
        android:id="@+id/layout_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_19"

        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_back"
            android:textColor="@color/color_1bb6ef"
            android:textSize="@dimen/sp_15"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_title"
        android:textColor="@color/color_595656"
        android:gravity="center"
        android:textSize="@dimen/sp_18"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52.5"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_18.5"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_15"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/composite_path"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_phone"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_b2b8c2"
            android:textSize="@dimen/sp_13"
            android:background="@null"
            android:inputType="phone"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_d4d4d8"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_52.5"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_15"
        >

        <ImageView
            android:id="@+id/img_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/path"
            android:layout_centerVertical="true"
            />

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/register_code"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_b2b8c2"
            android:textSize="@dimen/sp_13"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_path"
            android:layout_toLeftOf="@+id/txt_get_code"
            android:background="@null"
            android:inputType="text"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/txt_get_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/register_get_code"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/color_1bb6ef"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:gravity="center_vertical"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_d4d4d8"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42.5"
        android:text="@string/verify_next"
        android:textColor="@drawable/button_press_txt_blue"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/corner_blue_bg_blue"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        />


</LinearLayout>
