<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_efeff4"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55">

        <ImageView

            android:id="@+id/zf_zt_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/qrzf_icon" />


        <TextView
            android:id="@+id/zf_zt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/color_fd6212"
            android:textSize="@dimen/sp_18" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_128"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/zf_dd_bt_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_15" />

        <TextView
            android:id="@+id/zf_dd_jg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="￥0"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_30" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View

            android:layout_width="@dimen/dp_15"
            android:layout_height="1px" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_d4d4d8" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/order_detail_goods_name_title"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/sp_14" />

            <TextView

                android:id="@+id/zf_sp_spm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/order_detail_pay_time_title"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/zf_sp_spsj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/order_detail_pay_type_title"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/zf_sp_ddzffs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/order_detail_order_code_title_2"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/zf_sp_ddhm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/zf_ljzf_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42.5"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/grxx_xgmm_anbg"
        android:text="@string/order_detail_button_pay"
        android:textColor="@drawable/button_press_txt_blue"
        android:textSize="@dimen/sp_18"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/zf_qxzf_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42.5"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/zf_qxzf_anbg"
        android:text="@string/order_detail_button_cancle"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_18"
        android:visibility="gone"
        />


</LinearLayout>