<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_f2f3f2"
    android:id="@+id/main"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:text="@string/service_release_service_info"
        android:textSize="@dimen/sp_12"
        android:gravity="center_vertical"
        android:textColor="@color/color_8e95a1"
        android:paddingLeft="@dimen/dp_15"
        />

    <RelativeLayout
        android:id="@+id/layout_pcd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:paddingLeft="@dimen/dp_15"
        android:background="@color/white"
        >
        <ImageView
            android:id="@+id/img_pcd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_location"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            />

        <TextView
            android:id="@+id/txt_pcd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:layout_toRightOf="@+id/img_pcd"
            android:text="@string/service_release_service_pcd"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_b2b8c2"
            />

        <ImageView
            android:id="@+id/img_pcd_jt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_arrow"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_15"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_d4d4d8"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:orientation="horizontal"
        android:background="@color/white"
        >

        <ImageView
            android:id="@+id/img_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_house"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/edit_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:layout_toRightOf="@+id/img_location"
            android:hint="@string/service_release_service_detail_addr"
            android:textSize="@dimen/sp_14"
            android:textColorHint="@color/color_b2b8c2"
            android:textColor="@color/color_333333"
            android:layout_toLeftOf="@+id/img_location_jt"
            android:layout_marginRight="@dimen/dp_10"
            android:singleLine="true"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42.5"
        android:text="@string/reset_ok"
        android:textColor="@drawable/button_press_txt_blue"
        android:textSize="@dimen/sp_18"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/corner_blue_bg_blue"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        />
</LinearLayout>
